add translations for dialogs

--- a/locales/en.json
+++ b/locales/en.json
@@ -3,6 +3,7 @@
   "Name": "Name",
   "Duplicated Name": "Duplicated Name",
   "There is the same name in the list.": "There is the same name in the list.",
+  "OK": "OK",
   "Cancel": "Cancel",
   "Create": "Create",
   "Add": "Add",
@@ -14,5 +15,8 @@
   "Production": "Production",
   "Date": "Date",
   "History": "History",
-  "Stock": "Stock"
+  "Stock": "Stock",
+  "Will you delete this product? Every related event will be deleted together.": "Will you delete this product? Every related event will be deleted together.",
+  "Will you delete this event?": "Will you delete this event?",
+  "Will you quit the program?": "Will you quit the program?"
 }
