divide three segments for the list of events

--- a/locales/en.json
+++ b/locales/en.json
@@ -18,5 +18,8 @@
   "Stock": "Stock",
   "Will you delete this product? Every related event will be deleted together.": "Will you delete this product? Every related event will be deleted together.",
   "Will you delete this event?": "Will you delete this event?",
-  "Will you quit the program?": "Will you quit the program?"
+  "Will you quit the program?": "Will you quit the program?",
+  "Ready": "Ready",
+  "Processing": "Processing",
+  "Done": "Done"
 }
