add 'archived' things

--- a/locales/en.json
+++ b/locales/en.json
@@ -22,6 +22,7 @@
   "Ready": "Ready",
   "Processing": "Processing",
   "Done": "Done",
-  "Delete": "Delete",
-  "Accept": "Accept"
+  "Hide archived": "Hide archived",
+  "Show archived": "Show archived",
+  "Archived": "Archived"
 }
