change the event list to the event group list

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -24,5 +24,8 @@
   "Done": "Done",
   "Hide archived": "Hide archived",
   "Show archived": "Show archived",
-  "Archived": "Archived"
+  "Archived": "Archived",
+  "Process": "Process",
+  "Archive": "Archive",
+  "Undo": "Undo"
 }
