--- a/public/locales/ko.json
+++ b/public/locales/ko.json
@@ -24,5 +24,8 @@
   "Done": "완료",
   "Hide archived": "아카이브 숨기기",
   "Show archived": "아카이브 보이기",
-  "Archived": "아카이브"
+  "Archived": "아카이브",
+  "Process": "처리",
+  "Archive": "아카이브",
+  "Undo": "되돌리기"
 }
