--- a/public/locales/ko.json
+++ b/public/locales/ko.json
@@ -27,5 +27,9 @@
   "Archived": "아카이브",
   "Process": "처리",
   "Archive": "아카이브",
-  "Undo": "되돌리기"
+  "Undo": "되돌리기",
+  "uitab-all": "전부",
+  "uitab-ready": "준비",
+  "uitab-processing": "처리중",
+  "uitab-done": "완료"
 }
