--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -13,6 +13,7 @@
   "Type": "Type",
   "Sale": "Sale",
   "Production": "Production",
+  "All": "All",
   "Date": "Date",
   "History": "History",
   "Stock": "Stock",
