--- a/public/locales/ko.json
+++ b/public/locales/ko.json
@@ -32,5 +32,12 @@
   "uitab-all": "전부",
   "uitab-ready": "준비",
   "uitab-processing": "처리중",
-  "uitab-done": "완료"
+  "uitab-done": "완료",
+  "Save": "저장",
+  "Title": "제목",
+  "Kind": "종류",
+  "Products": "제품들",
+  "Select a product": "제품을 선택하세요.",
+  "Error": "오류",
+  "There are some errors on fields.": "필드에 오류들이 있습니다."
 }
